third_party/rust/cxx/v1/crate/tests/ui/ptr_missing_unsafe.rs
#[cxx::bridge]
mod ffi {
    unsafe extern "C++" {
        type C;

        fn not_unsafe_ptr(c: *mut C);
    }
}

fn main() {}
